--- a/interface-retour/pom.xml
+++ b/interface-retour/pom.xml
@@ -65,6 +65,12 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.9.1</version>
+        </dependency>
     </dependencies>
     <properties>
         <jersey.version>3.1.11</jersey.version>
