--- a/message/pom.xml
+++ b/message/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-streams</artifactId>
+      <version>3.9.1</version>
+    </dependency>
   </dependencies>
 
   <build>
