--- a/interface-retour/pom.xml
+++ b/interface-retour/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>jersey-media-json-binding</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.8.0</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <jersey.version>3.1.11</jersey.version>
